--- a/tariff-backend/pom.xml
+++ b/tariff-backend/pom.xml
@@ -66,6 +66,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- H2 Database Driver -->
+		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<scope>runtime</scope>
+        </dependency>
+
 	</dependencies>
 
 	<build>
