--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow-dispatch:
+  workflow_dispatch:
 
 env:
   AWS_REGION: ap-southeast-1
