--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-        working-directory: /tariff-backend
+        working-directory: ../tariff-backend
         run: |
           # Build a docker container and
           # push it to ECR so that it can
