--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,14 +61,14 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-        working-directory: ../tariff-backend
+        working-directory: ./tariff-backend
         run: |
           # Build a docker container and
           # push it to ECR so that it can
