--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   AWS_REGION: ap-southeast-1
-  SCR_REPOSITORY: tariffy/backend
+  ECR_REPOSITORY: tariffy/backend
   ECS_SERVICE:
   ECS_CLUSTER: quick-turtle-o5o4px
   ECS_TASK_DEFINITION:
@@ -54,7 +54,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
