--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -7,6 +7,8 @@ on:
         paths: ["frontend"]
     pull_request:
         paths: ["frontend"]
+    workflow_dispatch:
+
 env:
   AWS_REGION: ap-southeast-1
   ECR_REPOSITORY: tariffy/frontend
