--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -30,6 +30,12 @@ jobs:
         steps:
           - name: Checkout
             uses: actions/checkout@v4
+
+          - name: Create frontend .env from secrets
+            run: |
+                cat > frontend/.env <<EOF
+                NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+                EOF
             
           - name: Configure AWS credentials
             uses: aws-actions/configure-aws-credentials@v1
