--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -12,6 +12,11 @@ on:
 env:
   AWS_REGION: ap-southeast-1
   ECR_REPOSITORY: tariffy/frontend
+  ECS_SERVICE: tariffy-frontend-task-service-dysixd6s
+  ECS_CLUSTER: quick-turtle-o5o4px
+  ECS_TASK_DEFINITION_FAMILY: tariffy-frontend-task
+
+  CONTAINER_NAME: tariffy-frontend
 
 jobs:
     # build:
@@ -61,3 +66,19 @@ jobs:
                 docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
                 docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
                 echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+          - name: Fill in the new image ID in the Amazon ECS task definition
+            id: task-def
+            uses: aws-actions/amazon-ecs-render-task-definition@v1
+            with:
+                task-definition-family: ${{ env.ECS_TASK_DEFINITION_FAMILY }}
+                container-name: ${{ env.CONTAINER_NAME }}
+                image: ${{ steps.build-image.outputs.image }}
+
+          - name: Deploy Amazon ECS task definition
+            uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+            with:
+                task-definition: ${{ steps.task-def.outputs.task-definition }}
+                service: ${{ env.ECS_SERVICE }}
+                cluster: ${{ env.ECS_CLUSTER }}
+                wait-for-service-stability: true
