FE workflow update and bug fixes

--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -4,9 +4,11 @@ name: Frontend CD
 on:
     push:
         branches: ["main"]
-        paths: ["frontend"]
+        paths: 
+          - "frontend/**"
     pull_request:
-        paths: ["frontend"]
+        paths: 
+          - "frontend/**"
     workflow_dispatch:
 
 env:
