--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,17 @@
     "react-select": "^5.10.2",
     "react-select-country-list": "^2.2.3",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "d3-scale": "^4.0.2",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.21.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3-scale": "^4.0.3",
     "@types/node": "^20",
+    "@types/react-simple-maps": "^3.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
