--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -35,7 +35,7 @@ jobs:
         - name: Install deps & build
           working-directory: ./frontend
           run: |
-            npm ci
+            npm ci --legacy-peer-deps
             npm run build
 
     push-to-ecr:
