--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,14 +59,33 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+    - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/maven-3-jdk-21@master
+      continue-on-error: true 
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --sarif-file-output=snyk.sarif
+
+    - name: Upload result to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: snyk.sarif
+        
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       working-directory: ./tariff-backend
