--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,13 +74,14 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
     - name: Run Snyk to check for vulnerabilities
       uses: snyk/actions/maven-3-jdk-21@master
       continue-on-error: true 
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --sarif-file-output=snyk.sarif
+        args: code test ./tariff-backend --sarif-file-output=snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
