--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -81,7 +81,8 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: code test ./tariff-backend --sarif-file-output=snyk.sarif
+        args: code test --sarif-file-output=snyk.sarif
+      working-directory: ./tariff-backend
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
