--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -81,7 +81,7 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --file=pom.xml --sarif-file-output=snyk.sarif
+        args: --file=tariff-backend/pom.xml --sarif-file-output=snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
