--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -77,16 +77,16 @@ jobs:
 
     - name: Run Snyk to check for vulnerabilities
       uses: snyk/actions/maven-3-jdk-21@master
-      continue-on-error: true 
+      continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --file=./tariff-backend/pom.xml --sarif-file-output=snyk.sarif
+        args: --file=tariff-backend/pom.xml --sarif-file-output=tariff-backend/snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: snyk.sarif
+        sarif_file: tariff-backend/snyk.sarif
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
