--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -81,12 +81,13 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --file=tariff-backend/pom.xml --sarif-file-output=tariff-backend/snyk.sarif
+        args: --sarif-file-output=snyk.sarif
+        command: code test
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: tariff-backend/snyk.sarif
+        sarif_file: snyk.sarif
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
