--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -81,7 +81,7 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --exclude=frontend --sarif-file-output=snyk.sarif
+        args: --all-projects --exclude=frontend --sarif-file-output=snyk.sarif
 
     - name: Run Snyk SAST
       uses: snyk/actions/maven-3-jdk-21@master
