--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,23 +74,23 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+    
+    - uses: snyk/actions/setup@master
+    - uses: actions/setup-go@v1
 
     - name: Run Snyk to check for open source package vulnerabilities
-      uses: snyk/actions/maven-3-jdk-21@master
       continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --all-projects --exclude=frontend --sarif-file-output=snyk.sarif
+      working-directory: ./tariff-backend
+      run: synk test --file=pom.xml --sarif-file-output=snyk.sarif
 
     - name: Run Snyk SAST
-      uses: snyk/actions/maven-3-jdk-21@master
       continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --sarif-file-output=snyk.sarif
-        command: code test
+      working-directory: ./tariff-backend
+      run: snyk code test --sarif-file-output=snyk.sarif
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
