--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -83,7 +83,7 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       working-directory: ./tariff-backend
-      run: synk test --file=pom.xml --sarif-file-output=snyk.sarif
+      run: snyk test --file=pom.xml --sarif-file-output=snyk.sarif
 
     - name: Run Snyk SAST
       continue-on-error: true
@@ -95,7 +95,7 @@ jobs:
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: snyk.sarif
+        sarif_file: tariff-backend/snyk.sarif
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
