--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -75,23 +75,14 @@ jobs:
         distribution: 'temurin'
         cache: maven
     
-    - uses: snyk/actions/setup@master
-    - uses: actions/setup-go@v1
-
-    - name: Run Snyk to check for open source package vulnerabilities
-      continue-on-error: true
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        MAVEN_CMD: mvn
-      working-directory: ./tariff-backend
-      run: snyk test --file=pom.xml --sarif-file-output=snyk.sarif
-
     - name: Run Snyk SAST
+      uses: snyk/actions/maven-3-jdk-21@master
       continue-on-error: true
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      working-directory: ./tariff-backend
-      run: snyk code test --sarif-file-output=snyk.sarif
+      with:
+        args: --sarif-file-output=snyk.sarif
+        command: code test
 
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
