--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -87,7 +87,7 @@ jobs:
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: tariff-backend/snyk.sarif
+        sarif_file: snyk.sarif
         
     - name: Build with Maven
       run: mvn -B package --file pom.xml
