--- a/.github/workflows/workflow-fe.yml
+++ b/.github/workflows/workflow-fe.yml
@@ -22,6 +22,12 @@ env:
 jobs:
     build:
         runs-on: ubuntu-latest
+
+        permissions:
+          security-events: write
+          actions: read
+          contents: read
+
         steps:
         - uses: actions/checkout@v4
 
@@ -41,13 +47,14 @@ jobs:
           env:
             SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           working-directory: ./frontend
-          run: snyk code test --sarif-file-output=snyk-code.sarif
+          run: snyk code test --sarif-file-output=snyk-fe-code.sarif
 
         - name: Upload Snyk code results to GitHub Code Scanning
           uses: github/codeql-action/upload-sarif@v3
           with:
-            sarif_file: frontend/snyk-code.sarif
+            sarif_file: frontend/snyk-fe-code.sarif
             category: snyk-frontend-code
+
         - name: Install deps & build
           working-directory: ./frontend
           run: |
